#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of PANDORA_MCCNN
#
#     https://github.com/CNES/Pandora_MCCNN
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

#
# Pandora_MCCNN configuration file

# package setup main metadata
[metadata]
name = MCCNN
description = MCCNN is a neural network for learning a similarity measure on image patches
long_description_content_type = text/markdown
author = CNES
author_email = myriam.cournet@cnes.fr
url = https://github.com/CNES/Pandora_MCCNN
license = Apache License 2.0
license_file = LICENSE

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# Pandora_MCCNN packages dependencies
install_requires =
    importlib_resources
    numpy
    numba
    rasterio
    torch
    torchvision
    h5py
    opencv-python!=4.7.0.68
    scipy

package_dir =
    . = mc-cnn
packages = find:

[options.package_data]
mc_cnn.weights =
    *.pt

[options.extras_require]
dev =
    pytest
    pytest-cov
    pylint
    pre-commit
    black
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi
