#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of PANDORA_MCCNN
#
#     https://github.com/CNES/Pandora_MCCNN
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

#
# Pandora_MCCNN configuration file

# package setup main metadata
[metadata]
name = MCCNN
author = CNES
author_email = cars@cnes.fr
url = https://github.com/CNES/Pandora_MCCNN
description = MCCNN is a neural network for learning a similarity measure on image patches
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platform = any
keywords= 3D, IA, DEM,pandora, correlation, cars, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
python_requires = >=3.7

setup_requires =
    setuptools>=65.5
    setuptools_scm[toml]>=6.2 # Following https://pypi.org/project/setuptools-scm/
    wheel

# Pandora_MCCNN packages dependencies
install_requires =
    importlib_resources; python_version<="3.8"
    numpy
    numba
    rasterio
    torch
    torchvision
    h5py
    opencv-python!=4.7.0.68
    scipy

package_dir =
    . = mc-cnn
packages = find:

[options.package_data]
mc_cnn.weights =
    *.pt

[options.extras_require]
dev =
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8>=3.9.1                 # General linter
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter
    setuptools_scm                # versions from git tag
    twine                         # for pypi upload
    build
    pytest
    pytest-cov
    tox
    mypy

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 120
#show-source = true
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B